update: html files, favicon name

--- a/templates/thank.html
+++ b/templates/thank.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="./static/assets/css/main.css" />
-		<link href="./static/assets/favicon.ico" rel="icon">
+		<link href="./static/images/portfolio.ico" rel="icon">
 	</head>
 	<body class="is-preload">
 
@@ -23,92 +23,15 @@
 
 				<!-- One -->
 					<section id="one">
-						<header class="major">
-							<h2>About Me</h2>
-						</header>
-						<p>Highly motivated to direct my career to a mutlidisciplinary field combining Software Engineering, Data
-						Engineering, Cloud Computing Solution, and Data Analytics.</p>
-						<ul class="actions">
-							<li><a href="./about.html" class="button">Learn More</a></li>
-						</ul>
-					</section>
-
-				<!-- Two -->
-					<section id="two">
-						<h2>Recent Work</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/01.jpg" class="image fit thumb"><img src="./static/images/thumbs/01.jpg" alt="" /></a>
-								<h3>Project 1</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 1</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/02.jpg" class="image fit thumb"><img src="./static/images/thumbs/02.jpg" alt="" /></a>
-								<h3>Project 2</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 2</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/03.jpg" class="image fit thumb"><img src="./static/images/thumbs/03.jpg" alt="" /></a>
-								<h3>Project 3</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 3</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/04.jpg" class="image fit thumb"><img src="./static/images/thumbs/04.jpg" alt="" /></a>
-								<h3>Project 4</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 4</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/05.jpg" class="image fit thumb"><img src="./static/images/thumbs/05.jpg" alt="" /></a>
-								<h3>Project 5</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 5</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/06.jpg" class="image fit thumb"><img src="./static/images/thumbs/06.jpg" alt="" /></a>
-								<h3>Project 6</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 5</b></em></a></p>
-							</article>
-						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
-					</section>
-
-				<!-- Three -->
-					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Send me your information</p>
+						<p>
 						<div class="row">
-							<div class="col-8 col-12-small">
-								<form action="/submit_form" method="post" class="reveal-content" id="myform">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" form="myform"/></li>
-								</ul>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										8205 Dan Allen Dr.<br />
-										Fishers, IN 46038<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										317-997-1830
-									</li>
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">laurent.valle@outlook.com</a>
-									</li>
-								</ul>
-							</div>
+							<strong>Thank you! I will get in touch with you shortly!</strong>
 						</div>
+						</p>
+						<ul class="actions">
+							<li><a href="./index.html" class="button">Home Page</a></li>
+						</ul>
 					</section>
 
 			</div>
