--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="./static/assets/css/main.css" />
-		<link href="./static/assets/favicon.ico" rel="icon">
+		<link href="./static/images/portfolio.ico" rel="icon">
 	</head>
 	<body class="is-preload">
 
