Test fix section 1 in about.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -28,7 +28,7 @@
 						</header>
 						<p>I am a recent graduate from Indiana University – Purdue University Indianapolis where I earned a Bachelor of Science in Computer and Information Science with a Minor in Mathematics.<br />
 							<br />
-						   I had the privilege to study a large spectrum of computer science from fundamentals to data analytics. My average GPA of 3.89 demonstrates my academic potential and I am looking for converting this potential into professional experience.<br />
+						   I had the privilege to study a large spectrum of computer science from fundamentals to data analytics. My average GPA of 3.89 demonstrates my academic potential, and I am looking forward to convert this potential into professional experience.<br />
 						    <br />
 						   I was recognized on the Dean’s List Highest Honors for Academic Excellence in Fall 2017, Fall 2018, and Spring 2019. After graduation in December 2019, I was also recognized on the Science Scholars List of Indiana University – Purdue University Indianapolis.
 						</p>
@@ -41,14 +41,14 @@
 						<h2>Programming</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/python_s.jpg" class="image fit thumb"><img src="./static/images/python_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/python_sk.jpg" class="image fit thumb"><img src="./static/images/python_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Python</h3>
 								<p>Computing I - CSCI 23000<br />
 								   Complete Python Developer in 2020: Zero to Mastery on Udemy, by Andrei Neagoie.
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/cpp_s.jpg" class="image fit thumb"><img src="./static/images/cp+_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/cpp_sk.jpg" class="image fit thumb"><img src="./static/images/cp+_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>C++</h3>
 								<p>Computing II - CSCI 24000<br />
 								   Data Structures - CSCI 36200<br />
@@ -56,36 +56,34 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/python_s.jpg" class="image fit thumb"><img src="./static/images/git_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/fulls/01.jpg" class="image fit thumb"><img src="./static/images/git_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Git</h3>
-								<p>Complete Python Developer in 2020: Zero to Mastery on Udemy, by Andrei Neagoie.
-								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/cpp_s.jpg" class="image fit thumb"><img src="./static/images/gitHub_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/fulls/01.jpg" class="image fit thumb"><img src="./static/images/gitHub_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>GitHub</h3>
-								<p>Computing II - CSCI 24000<br />
-								   Complete Python Developer in 2020: Zero to Mastery on Udemy, by Andrei Neagoie.
-								</p>
 							</article>
 						</div>
 					</section>
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Data Science & Data Engineering</h2>
+						<h2>Data Science</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="./static/images/fulls/01.jpg" class="image fit thumb"><img src="./static/images/ds_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Numpy, Pandas, Matplotlib, Scikit-Learn</h3>
 								<p>Data Science - CSCI 48900<br />
-								   Complete Machine Learning and Data Science: Zero to Mastery on Udemy, by Andrei Neagoie.
+								   Big Data Analytics - CSCI 59000
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/02.jpg" class="image fit thumb"><img src="./static/images/data_mining_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/data_mining_sk.jpg" class="image fit thumb"><img src="./static/images/data_mining_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Data Mining</h3>
-								<p>Data Mining - CSCI 48100</p>
+								<p>Data Mining - CSCI 48100<br />
+								   Data Mining and Machine Learning: Fundamental Concepts and Algorithms, by Mohammed J. Zaki and Wagner Meira, Jr
+								   <a href="https://dataminingbook.info/resources/" style="color: red;"><em><b>Resources</b></em></a>
+								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="./static/images/fulls/03.jpg" class="image fit thumb"><img src="./static/images/dp_logo.jpg" alt="" width="370" height="205"/></a>
@@ -95,10 +93,20 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="./static/images/fulls/04.jpg" class="image fit thumb"><img src="./static/images/math_logo.jpg" alt="" width="370" height="205"/></a>
+								<h3>Mathemathics</h3>
+								<p>Linear Algebra - MATH 35100<br />
+								   Numerical Methods - MATH 41400<br />
+								   Probability - STAT 51600
+								</p>
+							</article>
+						<!--
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="./static/images/fulls/04.jpg" class="image fit thumb"><img src="./static/images/data_pipeline_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Data Engineering</h3>
 								<p>Building Data Engineering Pipelines in Python on Data Camp</p>
 							</article>
+						-->
 						</div>
 					</section>
 
