--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./static/images/lv_picture.jpg" alt="" /></a>
 					<h1>Laurent Valle<br />
-					Jr. Software Developer<br /></h1>
+					Jr. Software Engineer<br /></h1>
 				</div>
 			</header>
 
@@ -26,7 +26,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Highly motivated to direct my career to a mutlidisciplinary field combining Software Engineering, Data
+						<p>Highly motivated to direct my career to a multidisciplinary field combining Software Engineering, Data
 						Engineering, Cloud Computing Solution, and Data Analytics.</p>
 						<ul class="actions">
 							<li><a href="./about.html" class="button">Learn More</a></li>
