--- a/templates/about.html
+++ b/templates/about.html
@@ -37,7 +37,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two">
+					<section id="two_b">
 						<h2>Programming</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
