correct data mining skill view

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./static/images/lv_picture.jpg" alt="" /></a>
 					<h1>Laurent Valle<br />
-					Jr. Software Developer<br /></h1>
+					Jr. Software Engineer<br /></h1>
 				</div>
 			</header>
 
@@ -48,6 +48,14 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="./static/images/java_sk.jpg" class="image fit thumb"><img src="./static/images/java_logo.jpg" alt="" width="370" height="205"/></a>
+								<h3>Java</h3>
+								<p>Computing II - CSCI 24000<br />
+								   Operating Systems - CSCI 40300<br />
+								   Java In-Depth: Become a Complete Java Engineer! on Udemy, by Dheeru Mundluru
+								</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="./static/images/cpp_sk.jpg" class="image fit thumb"><img src="./static/images/cp+_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>C++</h3>
 								<p>Computing II - CSCI 24000<br />
@@ -78,7 +86,7 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/data_mining_sk.jpg" class="image fit thumb"><img src="./static/images/data_mining_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/data_mining_sk1.jpg" class="image fit thumb"><img src="./static/images/data_mining_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Data Mining</h3>
 								<p>Data Mining - CSCI 48100<br />
 								   Data Mining and Machine Learning: Fundamental Concepts and Algorithms, by Mohammed J. Zaki and Wagner Meira, Jr
