complete about.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
 						<h2>Programming</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/python_sk.jpg" class="image fit thumb"><img src="./static/images/python_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/python_skb.jpg" class="image fit thumb"><img src="./static/images/python_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Python</h3>
 								<p>Computing I - CSCI 23000<br />
 								   Complete Python Developer in 2020: Zero to Mastery on Udemy, by Andrei Neagoie.
@@ -79,7 +79,7 @@
 						<h2>Data Science</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/01.jpg" class="image fit thumb"><img src="./static/images/ds_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/data_science_sk.jpg" class="image fit thumb"><img src="./static/images/ds_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Numpy, Pandas, Matplotlib, Scikit-Learn</h3>
 								<p>Data Science - CSCI 48900<br />
 								   Big Data Analytics - CSCI 59000
@@ -94,9 +94,9 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/03.jpg" class="image fit thumb"><img src="./static/images/dp_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/deep_learning_sk.jpg" class="image fit thumb"><img src="./static/images/dp_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Deep Learning</h3>
-								<p>Deep Learning - CSCI 49000<br />
+								<p>Deep Learning - CSCI 49000, <a href="./deep_learning_readings.html" style="color: red;"><em><b>Mandatory Research Paper Readings</b></em></a><br />
 								   Deep Learning Specialization on deeplearning.ai & Coursera, by Andrew Ng
 								</p>
 							</article>
@@ -108,13 +108,6 @@
 								   Probability - STAT 51600
 								</p>
 							</article>
-						<!--
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/04.jpg" class="image fit thumb"><img src="./static/images/data_pipeline_logo.jpg" alt="" width="370" height="205"/></a>
-								<h3>Data Engineering</h3>
-								<p>Building Data Engineering Pipelines in Python on Data Camp</p>
-							</article>
-						-->
 						</div>
 					</section>
 
@@ -123,12 +116,12 @@
 						<h2>Database Systems</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/01.jpg" class="image fit thumb"><img src="./static/images/sql_server_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/sql_server_sk.jpg" class="image fit thumb"><img src="./static/images/sql_server_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>SQL Server</h3>
 								<p>Database Systems - CSCI 44300</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/02.jpg" class="image fit thumb"><img src="./static/images/oracle_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/oracle_sk.jpg" class="image fit thumb"><img src="./static/images/oracle_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Oracle</h3>
 								<p>Advanced Database Programming, Oracle - CSCI-N 311</p>
 							</article>
@@ -137,10 +130,22 @@
 
 				<!-- Five -->
 					<section id="five">
+						<h2>Cloud Computing</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./static/images/aws_sk.jpg" class="image fit thumb"><img src="./static/images/aws_logo.jpg" alt="" width="370" height="205"/></a>
+								<h3>AWS</h3>
+								<p>Ultimate AWS Certified Cloud Practitioner - 2020 on Udemy, by Stephane Maarek</p>
+							</article>
+						</div>
+					</section>
+
+				<!-- Six -->
+					<section id="six">
 						<h2>Web Development</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/01.jpg" class="image fit thumb"><img src="./static/images/html5_css3_js_logo.jpg" alt="" width="370" height="205"/></a>
+								<a href="./static/images/web_sk.jpg" class="image fit thumb"><img src="./static/images/html5_css3_js_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>HTML5 - CSS3 - JavaScript</h3>
 								<p>Client-Side Web Programming - CSCI-N 341</p>
 							</article>
@@ -167,10 +172,8 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/laurent-valle/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/lvalle87" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
