add portfolio project to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,15 +34,16 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two">
+					<section id="two_b">
 						<h2>Recent Work</h2>
 						<div class="row">
-							<!--
+							
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/01.jpg" class="image fit thumb"><img src="./static/images/thumbs/01.jpg" alt="" /></a>
-								<h3>Project 1</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 1</b></em></a></p>
+								<a href="./static/images/website_descp.jpg" class="image fit thumb"><img src="./static/images/portfo_img.jpg" alt="" width="370" height="205"/></a>
+								<h3>Portfolio Website</h3>
+								<p><a href="https://github.com/lvalle87/portfo" style="color: red;"><em><b>EXPLORE CODE ON GITHUB</b></em></a></p>
 							</article>
+							<!--
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="./static/images/fulls/02.jpg" class="image fit thumb"><img src="./static/images/thumbs/02.jpg" alt="" /></a>
 								<h3>Project 2</h3>
