set up simple_gui project

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,12 +43,12 @@
 								<h3>Portfolio Website</h3>
 								<p><a href="https://github.com/lvalle87/portfo" style="color: red;"><em><b>EXPLORE CODE ON GITHUB</b></em></a></p>
 							</article>
-							<!--
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/02.jpg" class="image fit thumb"><img src="./static/images/thumbs/02.jpg" alt="" /></a>
-								<h3>Project 2</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 2</b></em></a></p>
+								<a href="./static/images/gui_descp.jpg" class="image fit thumb"><img src="./static/images/gui_img.jpg" alt="" width="370" height="205"/></a>
+								<h3>Simple GUI</h3>
+								<p><a href="https://github.com/lvalle87/simple_gui" style="color: red;"><em><b>EXPLORE CODE ON GITHUB</b></em></a></p>
 							</article>
+							<!--
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="./static/images/fulls/03.jpg" class="image fit thumb"><img src="./static/images/thumbs/03.jpg" alt="" /></a>
 								<h3>Project 3</h3>
