update portfo with Infosys position

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./static/images/lv_picture.jpg" alt="" /></a>
 					<h1>Laurent Valle<br />
-					Jr. Software Engineer<br /></h1>
+					Associate Analyst<br /></h1>
 				</div>
 			</header>
 
@@ -26,9 +26,12 @@
 						<header class="major">
 							<h2>More About Me</h2>
 						</header>
-						<p>I am a recent graduate from Indiana University – Purdue University Indianapolis where I earned a Bachelor of Science in Computer and Information Science with a Minor in Mathematics.<br />
+						<p>Highly motivated to direct my career to a multidisciplinary field combining Software Engineering, Data
+							Engineering, Cloud Computing Solution, and Data Analytics.<br />
 							<br />
-						   I had the privilege to study a large spectrum of computer science from fundamentals to data analytics. My average GPA of 3.89 demonstrates my academic potential, and I am looking forward to convert this potential into professional experience.<br />
+							I am a recent graduate from Indiana University – Purdue University Indianapolis where I earned a Bachelor of Science in Computer and Information Science with a Minor in Mathematics.<br />
+							<br />
+						   I had the privilege to study a large spectrum of computer science from fundamentals to data analytics. My average GPA of 3.89 demonstrated my academic potential, and I am looking forward to start my Master in Data Science with IU Bloomington.<br />
 						    <br />
 						   I was recognized on the Dean’s List Highest Honors for Academic Excellence in Fall 2017, Fall 2018, and Spring 2019. After graduation in December 2019, I was also recognized on the Science Scholars List of Indiana University – Purdue University Indianapolis.
 						</p>
