--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./static/images/lv_picture.jpg" alt="" /></a>
 					<h1>Laurent Valle<br />
-					Jr. Software Engineer<br /></h1>
+					Associate Analyst<br /></h1>
 				</div>
 			</header>
 
@@ -26,8 +26,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Highly motivated to direct my career to a multidisciplinary field combining Software Engineering, Data
-						Engineering, Cloud Computing Solution, and Data Analytics.</p>
+						<p>Recently hired by Infosys as an Associate Analyst</p>
 						<ul class="actions">
 							<li><a href="./about.html" class="button">Learn More</a></li>
 						</ul>
@@ -53,68 +52,6 @@
 								<h3>The Knight's Tour Problem</h3>
 								<p><a href="./knight_tour.html" style="color: red;"><em><b>EXPLORE THE KNIGHT'S TOUR PROBLEM</b></em></a></p>
 							</article>
-							<!--
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/04.jpg" class="image fit thumb"><img src="./static/images/thumbs/04.jpg" alt="" /></a>
-								<h3>Project 4</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 4</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/05.jpg" class="image fit thumb"><img src="./static/images/thumbs/05.jpg" alt="" /></a>
-								<h3>Project 5</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 5</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/06.jpg" class="image fit thumb"><img src="./static/images/thumbs/06.jpg" alt="" /></a>
-								<h3>Project 6</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 5</b></em></a></p>
-							</article>
-						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
-						-->
-					</section>
-
-				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Send me your information</p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<form action="/submit_form" method="post" class="reveal-content" id="myform">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" form="myform"/></li>
-								</ul>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										8205 Dan Allen Dr.<br />
-										Fishers, IN 46038<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										317-997-1830
-									</li>
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">laurent.valle@outlook.com</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
-			</div>
 
 		<!-- Footer -->
 			<footer id="footer">
