--- a/templates/knight_tour.html
+++ b/templates/knight_tour.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./static/images/lv_picture.jpg" alt="" /></a>
 					<h1>Laurent Valle<br />
-					Jr. Software Engineer<br /></h1>
+					Associate Analyst<br /></h1>
 				</div>
 			</header>
 		<!-- Main -->
@@ -62,90 +62,6 @@
 							<li><a href="./index.html" class="button">Home Page</a></li>
 						</ul>
 					</section>
-
-				<!-- Two -->
-				<!--
-					<section id="two_b">
-						<h2>Recent Work</h2>
-						<div class="row">
-							
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/website_descp.jpg" class="image fit thumb"><img src="./static/images/portfo_img.jpg" alt="" width="370" height="205"/></a>
-								<h3>Portfolio Website</h3>
-								<p><a href="https://github.com/lvalle87/portfo" style="color: red;"><em><b>EXPLORE CODE ON GITHUB</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/gui2_descp.jpg" class="image fit thumb"><img src="./static/images/gui_img.jpg" alt="" width="370" height="205"/></a>
-								<h3>Simple GUI</h3>
-								<p><a href="https://github.com/lvalle87/simple_gui" style="color: red;"><em><b>EXPLORE CODE ON GITHUB</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/knight_tour_descp.jpg" class="image fit thumb"><img src="./static/images/knigth_tour_img.jpg" alt="" /></a>
-								<h3>The Knight's Tour Problem</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 3</b></em></a></p>
-							</article>
-							
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/04.jpg" class="image fit thumb"><img src="./static/images/thumbs/04.jpg" alt="" /></a>
-								<h3>Project 4</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 4</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/05.jpg" class="image fit thumb"><img src="./static/images/thumbs/05.jpg" alt="" /></a>
-								<h3>Project 5</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 5</b></em></a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="./static/images/fulls/06.jpg" class="image fit thumb"><img src="./static/images/thumbs/06.jpg" alt="" /></a>
-								<h3>Project 6</h3>
-								<p><a href="./about.html" style="color: red;"><em><b>EXPLORE PROJECT 5</b></em></a></p>
-							</article>
-						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
-	
-					</section>
-				-->
-				<!-- Three -->
-				<!--
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Send me your information</p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<form action="/submit_form" method="post" class="reveal-content" id="myform">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" form="myform"/></li>
-								</ul>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										8205 Dan Allen Dr.<br />
-										Fishers, IN 46038<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										317-997-1830
-									</li>
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">laurent.valle@outlook.com</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
-				-->
 			</div>
 
 		<!-- Footer -->
