--- a/templates/thank.html
+++ b/templates/thank.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./static/images/lv_picture.jpg" alt="" /></a>
 					<h1>Laurent Valle<br />
-					Jr. Software Engineer<br /></h1>
+					Associate Analyst<br /></h1>
 				</div>
 			</header>
 
