change index and about pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Recently hired by Infosys as an Associate Analyst</p>
+						<p>Associate Analyst at Infosys</p>
 						<ul class="actions">
 							<li><a href="./about.html" class="button">Learn More</a></li>
 						</ul>
