--- a/templates/about.html
+++ b/templates/about.html
@@ -29,11 +29,11 @@
 						<p>Highly motivated to direct my career to a multidisciplinary field combining Software Engineering, Data
 							Engineering, Cloud Computing Solution, and Data Analytics.<br />
 							<br />
-							I am a recent graduate from Indiana University – Purdue University Indianapolis where I earned a Bachelor of Science in Computer and Information Science with a Minor in Mathematics.<br />
+							I graduated from Indiana University – Purdue University Indianapolis where I earned a Bachelor of Science in Computer and Information Science with a Minor in Mathematics.<br />
 							<br />
-						   I had the privilege to study a large spectrum of computer science from fundamentals to data analytics. My average GPA of 3.89 demonstrated my academic potential, and I am looking forward to start my Master in Data Science with IU Bloomington.<br />
+						    I had the privilege to study a large spectrum of computer science from fundamentals to data analytics. My average GPA of 3.89 demonstrated my academic potential, and I am looking forward to start my Master in Data Science with IU Bloomington.<br />
 						    <br />
-						   I was recognized on the Dean’s List Highest Honors for Academic Excellence in Fall 2017, Fall 2018, and Spring 2019. After graduation in December 2019, I was also recognized on the Science Scholars List of Indiana University – Purdue University Indianapolis.
+						    I was recognized on the Dean’s List Highest Honors for Academic Excellence in Fall 2017, Fall 2018, and on the Scholar’s List in Spring 2019. After graduation in December 2019, I was also recognized on the Science Scholars List of Indiana University – Purdue University Indianapolis.
 						</p>
 						<p><img src="./static/images/IUPUI_logo.jpg" alt="Purdue School of Science, IUPUI" width="200"height="80"></p>
 
