change on about.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,7 @@
 							<br />
 							I graduated from Indiana University – Purdue University Indianapolis where I earned a Bachelor of Science in Computer and Information Science with a Minor in Mathematics.<br />
 							<br />
-						    I had the privilege to study a large spectrum of computer science from fundamentals to data analytics. My average GPA of 3.89 demonstrated my academic potential, and I am looking forward to start my Master in Data Science with IU Bloomington.<br />
+						    I had the privilege to study a large spectrum of computer science from fundamentals to data analytics. My average GPA of 3.89 demonstrated my academic potential, and I am higly motivated to generate the same results toward the Master in Data Science with IU Bloomington, starting January 15, 2021.<br />
 						    <br />
 						    I was recognized on the Dean’s List Highest Honors for Academic Excellence in Fall 2017, Fall 2018, and on the Scholar’s List in Spring 2019. After graduation in December 2019, I was also recognized on the Science Scholars List of Indiana University – Purdue University Indianapolis.
 						</p>
