--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./static/images/lv_picture.jpg" alt="" /></a>
 					<h1>Laurent Valle<br />
-					Associate Analyst<br /></h1>
+					Technical Consultant in the Abap Infosys - Eli Lilly Team<br /></h1>
 				</div>
 			</header>
 
