--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./static/images/lv_picture.jpg" alt="" /></a>
 					<h1>Laurent Valle<br />
-					Technical Consultant in the Abap Infosys - Eli Lilly Team<br />
+					Technical Consultant in the Abap Infosys<br />
 					Eli Lilly Team<br /></h1>
 				</div>
 			</header>
@@ -127,6 +127,11 @@
 								<a href="./static/images/oracle_sk.jpg" class="image fit thumb"><img src="./static/images/oracle_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Oracle</h3>
 								<p>Advanced Database Programming, Oracle - CSCI-N 311</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./static/images/abap_sk.jpg" class="image fit thumb"><img src="./static/images/abap_logo.jpg" alt="" width="370" height="205"/></a>
+								<h3>ABAP</h3>
+								<p>SAP ABAP Objects Programming Training on Udemy, by Peter Moxon</p>
 							</article>
 						</div>
 					</section>
