--- a/templates/about.html
+++ b/templates/about.html
@@ -14,8 +14,8 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./static/images/lv_picture.jpg" alt="" /></a>
 					<h1>Laurent Valle<br />
-					Technical Consultant in the Abap Infosys<br />
-					Eli Lilly Team<br /></h1>
+					Technical Consultant in the ABAP<br />
+					Infosys - Eli Lilly Team<br /></h1>
 				</div>
 			</header>
 
@@ -25,9 +25,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>More About Me</h2>
+							<h2>More About My Skills</h2>
 						</header>
-						<p>Highly motivated to direct my career to a multidisciplinary field combining Software Engineering, Data
+						<!--<p>Highly motivated to direct my career to a multidisciplinary field combining Software Engineering, Data
 							Engineering, Cloud Computing Solution, and Data Analytics.<br />
 							<br />
 							I graduated from Indiana University – Purdue University Indianapolis where I earned a Bachelor of Science in Computer and Information Science with a Minor in Mathematics.<br />
@@ -36,7 +36,7 @@
 						    <br />
 						    I was recognized on the Dean’s List Highest Honors for Academic Excellence in Fall 2017, Fall 2018, and on the Scholar’s List in Spring 2019. After graduation in December 2019, I was also recognized on the Science Scholars List of Indiana University – Purdue University Indianapolis.
 						</p>
-						<p><img src="./static/images/IUPUI_logo.jpg" alt="Purdue School of Science, IUPUI" width="200"height="80"></p>
+						<p><img src="./static/images/IUPUI_logo.jpg" alt="Purdue School of Science, IUPUI" width="200"height="80"></p>-->
 
 					</section>
 
