--- a/templates/about.html
+++ b/templates/about.html
@@ -168,9 +168,9 @@
 								<p>Complete Python Developer in 2020: Zero to Mastery on Udemy, by Andrei Neagoie.</p>
 							</article>
 						</div>
-						<ul class="actions">
+						<!--<ul class="actions">
 							<li><a href="./index.html" class="button">Home Page</a></li>
-						</ul>
+						</ul>-->
 					</section>
 
 
