--- a/templates/about.html
+++ b/templates/about.html
@@ -100,7 +100,8 @@
 								<a href="./static/images/deep_learning_sk.jpg" class="image fit thumb"><img src="./static/images/dp_logo.jpg" alt="" width="370" height="205"/></a>
 								<h3>Deep Learning</h3>
 								<p>Deep Learning - CSCI 49000, <a href="./deep_learning_readings.html" style="color: red;"><em><b>Mandatory Research Paper Readings</b></em></a><br />
-								   Deep Learning Specialization on deeplearning.ai & Coursera, by Andrew Ng
+								   Deep Learning Specialization on deeplearning.ai & Coursera, by Andrew Ng<br />
+								   E533 - Deep Learning Systems<a href="./e533.html" style="color: red;"><em><b>Syllabus</b></em></a>
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
