--- a/templates/deep_learning_readings.html
+++ b/templates/deep_learning_readings.html
@@ -14,7 +14,8 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./static/images/lv_picture.jpg" alt="" /></a>
 					<h1>Laurent Valle<br />
-					Associate Analyst<br /></h1>
+					Technical Consultant in the ABAP<br />
+					Infosys - Eli Lilly Team<br /></h1>
 				</div>
 			</header>
 
@@ -85,7 +86,7 @@
 							<a href="https://arxiv.org/abs/1906.02330" style="color: red;"><em><b>Finding Friend and Foe in Multi-Agent Games</b></em></a>
 						</p>
 						<ul class="actions">
-							<li><a href="./about.html" class="button">More About Me</a></li>
+							<li><a href="./about.html" class="button">More About My Skills</a></li>
 						</ul>
 					</section>
 
