--- a/templates/i526.html
+++ b/templates/i526.html
@@ -24,12 +24,12 @@
 
 				<!-- One -->
 					<section id="one">
-						<h2>E533, Deep Learning Systems - Syllabus</h2>
+						<h2>I526, Applied Machine Learning - Syllabus</h2>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<a href="./static/images/dp_schedule_skb.jpg" class="image fit thumb"><img src="./static/images/dp_schedule.jpg" alt="" width="570" height="405"/></a>
+						<a href="./static/images/ml_schedule_skb.jpg" class="image fit thumb"><img src="./static/images/ml_schedule.jpg" alt="" width="470" height="670"/></a>
 						<ul class="actions">
 							<li><a href="./about.html" class="button">More About My Skills</a></li>
 						</ul>
