--- a/templates/about.html
+++ b/templates/about.html
@@ -101,7 +101,8 @@
 								<h3>Deep Learning</h3>
 								<p>Deep Learning - CSCI 49000, <a href="./deep_learning_readings.html" style="color: red;"><em><b>Mandatory Research Paper Readings</b></em></a><br />
 								   Deep Learning Specialization on deeplearning.ai & Coursera, by Andrew Ng<br />
-								   E533 - Deep Learning Systems, <a href="./e533.html" style="color: red;"><em><b>Syllabus</b></em></a>
+								   I526 - Applied Machine Learning in Python, Numpy, SKLearn, and PyTorch - <a href="./e533.html" style="color: red;"><em><b>Syllabus</b></em></a><br />
+								   E533 - Deep Learning Systems - <a href="./e533.html" style="color: red;"><em><b>Syllabus</b></em></a>
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
